// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable 1`] = `
Object {
  "default": Object {
    "images": Array [
      Object {
        "height": 100,
        "path": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
        "width": 100,
      },
    ],
    "src": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
    "srcSet": "foobar/d65e7eabf402c163ee9e87493c5b07af-100.jpg",
    "toString": [Function],
  },
}
`;

exports[`multiple sizes 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
        "width": 500,
      },
      Object {
        "height": 900,
        "path": "foobar/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
    "srcSet": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg 500w,foobar/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output first resized image height & width 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
        "width": 500,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
    "srcSet": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg 500w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output should be in outputPath dir 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/img/9fca3403f028d41cd3046dd49330161a-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/img/e0adf4e554aa6d83e73d51aec7f8018a-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/img/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/img/9fca3403f028d41cd3046dd49330161a-500.jpg",
    "srcSet": "foobar/img/9fca3403f028d41cd3046dd49330161a-500.jpg 500w,foobar/img/e0adf4e554aa6d83e73d51aec7f8018a-750.jpg 750w,foobar/img/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`output should be relative to context 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/test/9fca3403f028d41cd3046dd49330161a-500x450.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/test/e0adf4e554aa6d83e73d51aec7f8018a-750x675.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/test/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000x900.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/test/9fca3403f028d41cd3046dd49330161a-500x450.jpg",
    "srcSet": "foobar/test/9fca3403f028d41cd3046dd49330161a-500x450.jpg 500w,foobar/test/e0adf4e554aa6d83e73d51aec7f8018a-750x675.jpg 750w,foobar/test/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000x900.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`override min and max with size 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/b50e60c7d6ffdd3c4020c738c5e57270-100.jpg",
        "width": 100,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/b50e60c7d6ffdd3c4020c738c5e57270-100.jpg",
    "srcSet": "foobar/b50e60c7d6ffdd3c4020c738c5e57270-100.jpg 100w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`override min and max with sizes 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/b50e60c7d6ffdd3c4020c738c5e57270-100.jpg",
        "width": 100,
      },
      Object {
        "height": 180,
        "path": "foobar/4f9c9d6e52f4c3519fc4ac3e8325e69b-200.jpg",
        "width": 200,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/b50e60c7d6ffdd3c4020c738c5e57270-100.jpg",
    "srcSet": "foobar/b50e60c7d6ffdd3c4020c738c5e57270-100.jpg 100w,foobar/4f9c9d6e52f4c3519fc4ac3e8325e69b-200.jpg 200w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`parses json notation 1`] = `
Object {
  "default": Object {
    "height": 45,
    "images": Array [
      Object {
        "height": 45,
        "path": "foobar/1eb4744a27c474d81844ec0ee8cbfaa6-50.jpg",
        "width": 50,
      },
      Object {
        "height": 90,
        "path": "foobar/b50e60c7d6ffdd3c4020c738c5e57270-100.jpg",
        "width": 100,
      },
      Object {
        "height": 180,
        "path": "foobar/4f9c9d6e52f4c3519fc4ac3e8325e69b-200.jpg",
        "width": 200,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/1eb4744a27c474d81844ec0ee8cbfaa6-50.jpg",
    "srcSet": "foobar/1eb4744a27c474d81844ec0ee8cbfaa6-50.jpg 50w,foobar/b50e60c7d6ffdd3c4020c738c5e57270-100.jpg 100w,foobar/4f9c9d6e52f4c3519fc4ac3e8325e69b-200.jpg 200w",
    "toString": [Function],
    "width": 50,
  },
}
`;

exports[`png 1`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/d88e8a0009c791633d0774e3df9cdee1-500.png",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/2f2f0138d3511aa5b0bba8b873ac5653-513.png",
        "width": 513,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/d88e8a0009c791633d0774e3df9cdee1-500.png",
    "srcSet": "foobar/d88e8a0009c791633d0774e3df9cdee1-500.png 500w,foobar/2f2f0138d3511aa5b0bba8b873ac5653-513.png 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`png to jpeg with background color 1`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/19cbc927ca48ea604519cecffc258910-500.jpg",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/2cd0b486a7f86621fbccf976cbf3f7f8-513.jpg",
        "width": 513,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/19cbc927ca48ea604519cecffc258910-500.jpg",
    "srcSet": "foobar/19cbc927ca48ea604519cecffc258910-500.jpg 500w,foobar/2cd0b486a7f86621fbccf976cbf3f7f8-513.jpg 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`png to jpeg with background color 2`] = `
Object {
  "default": Object {
    "height": 580,
    "images": Array [
      Object {
        "height": 580,
        "path": "foobar/19cbc927ca48ea604519cecffc258910-500.jpg",
        "width": 500,
      },
      Object {
        "height": 595,
        "path": "foobar/2cd0b486a7f86621fbccf976cbf3f7f8-513.jpg",
        "width": 513,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/19cbc927ca48ea604519cecffc258910-500.jpg",
    "srcSet": "foobar/19cbc927ca48ea604519cecffc258910-500.jpg 500w,foobar/2cd0b486a7f86621fbccf976cbf3f7f8-513.jpg 513w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`public path should replace global publicPath 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "public/9fca3403f028d41cd3046dd49330161a-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "public/e0adf4e554aa6d83e73d51aec7f8018a-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "public/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "public/9fca3403f028d41cd3046dd49330161a-500.jpg",
    "srcSet": "public/9fca3403f028d41cd3046dd49330161a-500.jpg 500w,public/e0adf4e554aa6d83e73d51aec7f8018a-750.jpg 750w,public/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`single size 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
        "width": 500,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
    "srcSet": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg 500w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with min and max sizes 1`] = `
Object {
  "default": Object {
    "height": 540,
    "images": Array [
      Object {
        "height": 540,
        "path": "foobar/f0784d948f0729cf9d0b1c5123324cfb-600.jpg",
        "width": 600,
      },
      Object {
        "height": 630,
        "path": "foobar/2c580c0241c79b453cb22a028f87724e-700.jpg",
        "width": 700,
      },
      Object {
        "height": 720,
        "path": "foobar/bbb4217a57bf88e2f63f5568a32a099c-800.jpg",
        "width": 800,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/f0784d948f0729cf9d0b1c5123324cfb-600.jpg",
    "srcSet": "foobar/f0784d948f0729cf9d0b1c5123324cfb-600.jpg 600w,foobar/2c580c0241c79b453cb22a028f87724e-700.jpg 700w,foobar/bbb4217a57bf88e2f63f5568a32a099c-800.jpg 800w",
    "toString": [Function],
    "width": 600,
  },
}
`;

exports[`with min and max sizes options 1`] = `
Object {
  "default": Object {
    "height": 90,
    "images": Array [
      Object {
        "height": 90,
        "path": "foobar/b50e60c7d6ffdd3c4020c738c5e57270-100.jpg",
        "width": 100,
      },
      Object {
        "height": 150,
        "path": "foobar/cdade200a40ece2e59decb48e3cc2495-167.jpg",
        "width": 167,
      },
      Object {
        "height": 211,
        "path": "foobar/d28adc0e55643b8427066e135a366ce1-234.jpg",
        "width": 234,
      },
      Object {
        "height": 270,
        "path": "foobar/d2285e5153ea7fe7454e9647488e0244-300.jpg",
        "width": 300,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/b50e60c7d6ffdd3c4020c738c5e57270-100.jpg",
    "srcSet": "foobar/b50e60c7d6ffdd3c4020c738c5e57270-100.jpg 100w,foobar/cdade200a40ece2e59decb48e3cc2495-167.jpg 167w,foobar/d28adc0e55643b8427066e135a366ce1-234.jpg 234w,foobar/d2285e5153ea7fe7454e9647488e0244-300.jpg 300w",
    "toString": [Function],
    "width": 100,
  },
}
`;

exports[`with min and max sizes, and default steps 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
        "width": 500,
      },
      Object {
        "height": 600,
        "path": "foobar/13f4f087fadeeea363a45fa2f6a4cd79-667.jpg",
        "width": 667,
      },
      Object {
        "height": 751,
        "path": "foobar/394eeb3b30156050e5d7d7984bdcfaf3-834.jpg",
        "width": 834,
      },
      Object {
        "height": 900,
        "path": "foobar/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
    "srcSet": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg 500w,foobar/13f4f087fadeeea363a45fa2f6a4cd79-667.jpg 667w,foobar/394eeb3b30156050e5d7d7984bdcfaf3-834.jpg 834w,foobar/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with placeholder image 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/e0adf4e554aa6d83e73d51aec7f8018a-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": "data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAUDBAQEAwUEBAQFBQUGBwwIBwcHBw8LCwkMEQ8SEhEPERETFhwXExQaFRERGCEYGh0dHx8fExciJCIeJBweHx4BBQUFBwYHDggIDh4UERQeHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHv/AABEIACQAKAMBEQACEQEDEQH/xAGiAAABBQEBAQEBAQAAAAAAAAAAAQIDBAUGBwgJCgsQAAIBAwMCBAMFBQQEAAABfQECAwAEEQUSITFBBhNRYQcicRQygZGhCCNCscEVUtHwJDNicoIJChYXGBkaJSYnKCkqNDU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6g4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2drh4uPk5ebn6Onq8fLz9PX29/j5+gEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoLEQACAQIEBAMEBwUEBAABAncAAQIDEQQFITEGEkFRB2FxEyIygQgUQpGhscEJIzNS8BVictEKFiQ04SXxFxgZGiYnKCkqNTY3ODk6Q0RFRkdISUpTVFVWV1hZWmNkZWZnaGlqc3R1dnd4eXqCg4SFhoeIiYqSk5SVlpeYmZqio6Slpqeoqaqys7S1tre4ubrCw8TFxsfIycrS09TV1tfY2dri4+Tl5ufo6ery8/T19vf4+fr/2gAMAwEAAhEDEQA/AMnW/wBnaO4v4hpWo2tjZFv3reWxkRfRVzhvqSMe9bukuhnzO1mUm/ZomXVIZF8Uxy2YbMiyWZD47AYYg/pU+yGpF3XP2aNIuYi+na7cWlwe5hDRn/gORj86p0kHMzl7j9nPxZo9za32karY6lJGcyxMDCf+A5JB49cVlUoOUWjajW9nNS7HfeDPg9ObqK+8VyQsiHcLKE5DEf327j2HX1rCjgrO8zvxGZuS5aa+Z7dPNBa20tzcyRwwRKXkkfhVUDJJ9K9A8g8i8TftB+D9MuXg0u1utXZODKn7mIn2LfMf++cVm6iQ1FkvgT48eG/EWsRaXe2E+kTXB2xSPKJIi3oTgEZ9cYoVVdQcWeqQ3thcY+z3dtNuO0bJFbJ9OD1rS6ESFAeOfoaAPFPFvw98dalod43iv4hNNYW8DyPHH+7jbaCfnwACOOpzWMozfUtOK6HzWbIu/wC7IlQAH5PmyOnPpWG6L2Z33w1+Geta217cBlsJ9PmEWy5Uq27GfTjginKN0JSsz1v4S/DS78N+NINakuIfJSNmuQX3GSYhh8vA4AYHPrmqpwfMmwlJWPbAVfkZA7iuoyM+70+0u7SW2u4FninUpJDJ8yOD1BB4NTuB5/rHwltZ/F9j4h0pbKxNsQJIBbDy3VfukKMYYcfp6VDp63Q0+5sa5pOssrxxqmbniS4jjw+4Dgkg5HAxntUzTYIs/C7Tdfg8O+X4ilea4S5kEczABpI88EgdO/4VVNO2o5W6HXeQVyQcitCSVVGc5NMBr5DcE1LASJiwYtzzTQErcKBng0wAdM9z1oA//9k=",
    "src": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
    "srcSet": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg 500w,foobar/e0adf4e554aa6d83e73d51aec7f8018a-750.jpg 750w,foobar/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;

exports[`with size defined in webpack.config.js 1`] = `
Object {
  "default": Object {
    "height": 450,
    "images": Array [
      Object {
        "height": 450,
        "path": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
        "width": 500,
      },
      Object {
        "height": 675,
        "path": "foobar/e0adf4e554aa6d83e73d51aec7f8018a-750.jpg",
        "width": 750,
      },
      Object {
        "height": 900,
        "path": "foobar/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg",
        "width": 1000,
      },
    ],
    "placeholder": undefined,
    "src": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg",
    "srcSet": "foobar/9fca3403f028d41cd3046dd49330161a-500.jpg 500w,foobar/e0adf4e554aa6d83e73d51aec7f8018a-750.jpg 750w,foobar/ad4b6c4d9af1cfd8e7b6baaf15a948dc-1000.jpg 1000w",
    "toString": [Function],
    "width": 500,
  },
}
`;
